# Forge_RP

./: .gitignore  ComfyUI - SymbolicLink  README.md  package-lock.json  package.json  tauri.conf.json
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
src-tauri/: .comfyui_path  .python_path  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: comfy_manager.rs  main.rs
